Add possibility to edit a draft message from within a conversation
Any draft message into a conversation will display an "edit draft"
button at the top of the body when expanded. The button leads to the
composer.

MAILAND-1455

--- a/app/src/main/res/layout/view_load_content_button.xml
+++ b/app/src/main/res/layout/view_load_content_button.xml
@@ -46,6 +46,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:textAllCaps="false"
         android:textSize="@dimen/h6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
