--- a/app/src/main/res/layout/layout_message_details_web_view.xml
+++ b/app/src/main/res/layout/layout_message_details_web_view.xml
@@ -94,6 +94,21 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         app:text="@string/load_embedded_images"
         tools:visibility="visible" />
 
+    <ch.protonmail.android.views.messageDetails.LoadContentButton
+        android:id="@+id/editDraftButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/message_spacing"
+        android:layout_marginTop="@dimen/message_spacing_small"
+        android:layout_marginRight="@dimen/message_spacing"
+        android:layout_marginBottom="@dimen/message_spacing_small"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/loadEmbeddedImagesButton"
+        android:visibility="gone"
+        app:text="@string/edit_draft"
+        tools:visibility="visible" />
+
     <TextView
         android:id="@+id/spamScoreView"
         android:layout_width="0dp"
@@ -101,7 +116,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_margin="@dimen/fields_default_space_small"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loadEmbeddedImagesButton"
+        app:layout_constraintTop_toBottomOf="@id/editDraftButton"
         android:background="@color/warning"
         android:padding="@dimen/fields_default_space"
         android:textColor="@color/white"
