Some right pading added to labels action sheet items.
MAILAND-1558

--- a/app/src/main/res/layout/item_manage_labels_action.xml
+++ b/app/src/main/res/layout/item_manage_labels_action.xml
@@ -46,6 +46,7 @@
         android:id="@+id/checkbox_manage_labels_action_is_checked"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/padding_l"
         android:clickable="false"
         android:focusable="false"
         android:text="@null"
