Improve expanding / collapsing behavior of messages in a conversation
- Hide chevron when a message in a conversation is collapsed (clicking
  anywhere on the header will expand the message)
- When message is collapsed, the header gets collapsed as well

MAILAND-1442

--- a/app/src/main/res/layout/layout_message_details_header.xml
+++ b/app/src/main/res/layout/layout_message_details_header.xml
@@ -171,7 +171,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeDateTextView"
         android:src="@drawable/ic_chevron_down"
-        app:tint="@color/icon_weak" />
+        app:tint="@color/icon_weak"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/toCollapsedTextView"
