Error state from mailbox in case of no messages has been added.
We didn't have an error state screen defined for mailbox in the situation when there was no messages fetched and an error has occured.
This has been added to prevent displaying just an empty screen in this situation.
If the mailbox recycler view has already any messages dispalyed, just a toast with an error message  will be displayed as before.

--- a/app/src/main/res/layout/activity_mailbox.xml
+++ b/app/src/main/res/layout/activity_mailbox.xml
@@ -81,6 +81,15 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/storageLimitAlert" />
 
+                <include
+                    android:id="@+id/include_mailbox_error"
+                    layout="@layout/layout_mailbox_error_state"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toTopOf="@id/mailboxActionsView"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/storageLimitAlert" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/mailboxRecyclerView"
                     android:layout_width="match_parent"
