Extract ActionSheetTarget class to its own file and add package for detail views
This changes nothing in the logic / behavior, just moves around files to
move towards a clearer structure.

MAILAND-1533

--- a/app/src/main/res/layout/layout_message_details_header.xml
+++ b/app/src/main/res/layout/layout_message_details_header.xml
@@ -120,7 +120,7 @@
         android:textSize="18sp"
         tools:text="@string/lock_default" />
 
-    <ch.protonmail.android.details.presentation.MessageDetailsHeaderIcons
+    <ch.protonmail.android.details.presentation.view.MessageDetailsHeaderIcons
         android:id="@+id/messageDetailsIcons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
