--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,7 +75,7 @@
         <item name="android:singleLine">true</item>
         <item name="android:minWidth">@dimen/size_badge</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:background">@drawable/shape_ellipse</item>
+        <item name="android:background">@drawable/shape_stretchable_circle</item>
         <item name="backgroundTint">?brand_norm</item>
     </style>
 
