--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -145,9 +145,13 @@
         <item name="android:elevation">@dimen/elevation_s</item>
         <item name="android:focusable">true</item>
         <item name="android:gravity">center</item>
-        <item name="android:padding">@dimen/padding_l</item>
+        <item name="android:paddingTop">@dimen/padding_l</item>
+        <item name="android:paddingBottom">@dimen/padding_l</item>
+        <item name="android:paddingStart">@dimen/padding_m</item>
+        <item name="android:paddingEnd">@dimen/padding_m</item>
         <item name="android:textColor">@color/cornflower_blue</item>
         <item name="android:textAppearance">@style/Proton.Text.Default</item>
+        <item name="android:lines">2</item>
         <item name="drawableTint">@color/cornflower_blue</item>
     </style>
 
