--- a/app/src/main/res/layout/layout_message_details_web_view.xml
+++ b/app/src/main/res/layout/layout_message_details_web_view.xml
@@ -138,7 +138,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <LinearLayout
         android:id="@+id/messageWebViewContainer"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="@dimen/constrained_message_content_view_size"
         android:focusableInTouchMode="true"
         android:descendantFocusability="blocksDescendants"
         android:animateLayoutChanges="true"
