Fix not being able to create and update labels with 2 of the colors
There's a list of allowed colors for the labels on the backend. Two of the colors that were in the designs are not present in this list. Because of this we had done a workaround to map the colors shown in our app to the colors that are actually allowed on the backend. Apart from the workaround, this situation still caused problems in the app sometimes, like creating and updating labels. In this commit the workaround is removed and the two problematic colors are replaced with the colors that are actually allowed by the backend, which are very similar to the ones in the designs.

MAILAND-2156

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -144,8 +144,8 @@
     <color name="kimberly_base">#9B94D1</color>
     <color name="pacific_base">#69A9D1</color>
     <color name="glacier_base">#A8C4D5</color>
-    <color name="aqua_base">#79C4B7</color>
-    <color name="sage_base">#A1C8C1</color>
+    <color name="aqua_base">#5EC7B7</color>
+    <color name="sage_base">#97C9C1</color>
     <color name="fern_base">#72BB75</color>
     <color name="moss_base">#9DB99F</color>
     <color name="pear_base">#C3D261</color>
