--- a/app/src/main/res/layout/activity_swipe_chooser.xml
+++ b/app/src/main/res/layout/activity_swipe_chooser.xml
@@ -55,6 +55,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_marginStart="@dimen/settings_radio_button_margin"
             android:drawableEnd="@drawable/ic_envelope_dot"
             android:drawablePadding="@dimen/padding_m"
+            android:layoutDirection="rtl"
             android:text="@string/mark_as_read" />
 
         <RadioButton
@@ -65,6 +66,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_marginStart="@dimen/settings_radio_button_margin"
             android:drawableEnd="@drawable/ic_star"
             android:drawablePadding="@dimen/padding_m"
+            android:layoutDirection="rtl"
             android:text="@string/star_unstar" />
 
         <RadioButton
@@ -75,6 +77,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_marginStart="@dimen/settings_radio_button_margin"
             android:drawableEnd="@drawable/ic_trash"
             android:drawablePadding="@dimen/padding_m"
+            android:layoutDirection="rtl"
             android:text="@string/trash" />
 
 <!--        <RadioButton-->
@@ -115,6 +118,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_marginStart="@dimen/settings_radio_button_margin"
             android:drawableEnd="@drawable/ic_archive"
             android:drawablePadding="@dimen/padding_m"
+            android:layoutDirection="rtl"
             android:text="@string/move_to_archive" />
 
         <RadioButton
@@ -125,6 +129,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_marginStart="@dimen/settings_radio_button_margin"
             android:drawableEnd="@drawable/ic_fire"
             android:drawablePadding="@dimen/padding_m"
+            android:layoutDirection="rtl"
             android:text="@string/move_to_spam" />
     </RadioGroup>
 
