--- a/app/src/main/res/layout/activity_swipe_chooser.xml
+++ b/app/src/main/res/layout/activity_swipe_chooser.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-Copyright (c) 2020 Proton Technologies AG
-
-This file is part of ProtonMail.
-
-ProtonMail is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-ProtonMail is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with ProtonMail. If not, see https://www.gnu.org/licenses/.
--->
+  ~ Copyright (c) 2020 Proton Technologies AG
+  ~
+  ~ This file is part of ProtonMail.
+  ~
+  ~ ProtonMail is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ ProtonMail is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
+  -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,106 +30,106 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_m"
-        android:layout_marginStart="@dimen/padding_l">
+        android:layout_marginHorizontal="@dimen/padding_l">
 
-<!--        <RadioButton-->
+<!--        <me.proton.core.presentation.ui.view.ProtonRadioButton-->
 <!--            android:id="@+id/none"-->
 <!--            style="@style/ProtonRadioButton.Mail"-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="wrap_content"-->
 <!--            android:layout_gravity="start"-->
-<!--            android:layout_marginStart="@dimen/settings_radio_button_margin"-->
-<!--            android:drawableEnd="@drawable/ic_clear_circle"-->
+<!--            android:layout_marginHorizontal="@dimen/settings_radio_button_margin"-->
+<!--            android:drawableStart="@drawable/ic_clear_circle"-->
 <!--            android:drawablePadding="@dimen/padding_m"-->
-<!--            android:layoutDirection="rtl"-->
+<!--            -->
 <!--            android:paddingTop="@dimen/padding_l"-->
 <!--            android:visibility="gone"-->
 <!--            android:paddingBottom="@dimen/padding_l"-->
 <!--            android:text="@string/none" />-->
 
-        <RadioButton
+        <me.proton.core.presentation.ui.view.ProtonRadioButton
             android:id="@+id/read_unread"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="@dimen/settings_radio_button_margin"
-            android:drawableEnd="@drawable/ic_envelope_dot"
+            android:layout_marginHorizontal="@dimen/settings_radio_button_margin"
+            android:drawableStart="@drawable/ic_envelope_dot"
             android:drawablePadding="@dimen/padding_m"
-            android:layoutDirection="rtl"
+            
             android:text="@string/mark_as_read" />
 
-        <RadioButton
+        <me.proton.core.presentation.ui.view.ProtonRadioButton
             android:id="@+id/star_unstar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="@dimen/settings_radio_button_margin"
-            android:drawableEnd="@drawable/ic_star"
+            android:layout_marginHorizontal="@dimen/settings_radio_button_margin"
+            android:drawableStart="@drawable/ic_star"
             android:drawablePadding="@dimen/padding_m"
-            android:layoutDirection="rtl"
+            
             android:text="@string/star_unstar" />
 
-        <RadioButton
+        <me.proton.core.presentation.ui.view.ProtonRadioButton
             android:id="@+id/trash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="@dimen/settings_radio_button_margin"
-            android:drawableEnd="@drawable/ic_trash"
+            android:layout_marginHorizontal="@dimen/settings_radio_button_margin"
+            android:drawableStart="@drawable/ic_trash"
             android:drawablePadding="@dimen/padding_m"
-            android:layoutDirection="rtl"
+            
             android:text="@string/trash" />
 
-<!--        <RadioButton-->
+<!--        <me.proton.core.presentation.ui.view.ProtonRadioButton-->
 <!--            android:id="@+id/label_as"-->
 <!--            style="@style/ProtonRadioButton.Mail"-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="wrap_content"-->
 <!--            android:layout_gravity="start"-->
-<!--            android:layout_marginStart="@dimen/settings_radio_button_margin"-->
-<!--            android:drawableEnd="@drawable/ic_label"-->
+<!--            android:layout_marginHorizontal="@dimen/settings_radio_button_margin"-->
+<!--            android:drawableStart="@drawable/ic_label"-->
 <!--            android:drawablePadding="@dimen/padding_m"-->
-<!--            android:layoutDirection="rtl"-->
+<!--            -->
 <!--            android:paddingTop="@dimen/padding_l"-->
 <!--            android:visibility="gone"-->
 <!--            android:paddingBottom="@dimen/padding_l"-->
 <!--            android:text="@string/label_as" />-->
 
-<!--        <RadioButton-->
+<!--        <me.proton.core.presentation.ui.view.ProtonRadioButton-->
 <!--            android:id="@+id/move_to"-->
 <!--            style="@style/ProtonRadioButton.Mail"-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="wrap_content"-->
 <!--            android:layout_gravity="start"-->
-<!--            android:layout_marginStart="@dimen/settings_radio_button_margin"-->
-<!--            android:drawableEnd="@drawable/ic_folder_move"-->
+<!--            android:layout_marginHorizontal="@dimen/settings_radio_button_margin"-->
+<!--            android:drawableStart="@drawable/ic_folder_move"-->
 <!--            android:drawablePadding="@dimen/padding_m"-->
 <!--            android:visibility="gone"-->
-<!--            android:layoutDirection="rtl"-->
+<!--            -->
 <!--            android:paddingTop="@dimen/padding_l"-->
 <!--            android:paddingBottom="@dimen/padding_l"-->
 <!--            android:text="@string/move_to" />-->
 
-        <RadioButton
+        <me.proton.core.presentation.ui.view.ProtonRadioButton
             android:id="@+id/move_to_archive"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="@dimen/settings_radio_button_margin"
-            android:drawableEnd="@drawable/ic_archive"
+            android:layout_marginHorizontal="@dimen/settings_radio_button_margin"
+            android:drawableStart="@drawable/ic_archive"
             android:drawablePadding="@dimen/padding_m"
-            android:layoutDirection="rtl"
+            
             android:text="@string/move_to_archive" />
 
-        <RadioButton
+        <me.proton.core.presentation.ui.view.ProtonRadioButton
             android:id="@+id/move_to_spam"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="@dimen/settings_radio_button_margin"
-            android:drawableEnd="@drawable/ic_fire"
+            android:layout_marginHorizontal="@dimen/settings_radio_button_margin"
+            android:drawableStart="@drawable/ic_fire"
             android:drawablePadding="@dimen/padding_m"
-            android:layoutDirection="rtl"
+            
             android:text="@string/move_to_spam" />
     </RadioGroup>
 
